@@ -1,0 +1,11 @@
+from Products.CMFCore.utils import getToolByName
+
+
+PROJECTNAME = 'ftw.testing.tests'
+
+
+def uninstall(self):
+    setup_tool = getToolByName(self, 'portal_setup')
+    setup_tool.runAllImportStepsFromProfile(
+        'profile-{0}:uninstall'.format(PROJECTNAME),
+        ignore_dependencies=True)
