@@ -1,0 +1,4 @@
+
+def initialize(context):
+    """Initializer called when used as a Zope 2 product.
+    """
