@@ -1,8 +1,11 @@
 <configure
     xmlns="http://namespaces.zope.org/zope"
+    xmlns:five="http://namespaces.zope.org/five"
     xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
     xmlns:i18n="http://namespaces.zope.org/i18n"
     i18n_domain="ftw.testing.tests">
+
+    <five:registerPackage package="." initialize=".initialize" />
 
     <genericsetup:registerProfile
         name="default"
